--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.0",
+    "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
     "eslint": "^8.8.0"
   }
 }
