--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
     "serverstart": "DEBUG=membersonly:* npm run devstart",
+    "dbstop": "brew services stop mongodb-community@5.0",
+    "dbstart": "brew services start mongodb-community@5.0",
     "git": "git add . && git commit && git push origin $(git rev-parse --abbrev-ref HEAD) && echo '\n' && echo $(tput setaf 2)'commited: ' $(tput setaf 1)$(date) && echo '\n'",
     "sass": "sass --watch src/stylesheets:public/stylesheets",
     "babel": "npx babel src --watch --out-dir public --source-maps"
