--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "git": "git add . && git commit && git push origin $(git rev-parse --abbrev-ref HEAD) && echo '\n' && echo $(tput setaf 2)'commited: ' $(tput setaf 1)$(date) && echo '\n'"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
     "debug": "^4.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.16.1",
+    "express-validator": "^6.14.0",
     "http-errors": "^2.0.0",
+    "mongoose": "^6.2.1",
     "morgan": "^1.9.1",
     "pug": "^3.0.2"
   },
