--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "debug": "^4.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.16.1",
+    "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "http-errors": "^2.0.0",
     "mongoose": "^6.2.1",
     "morgan": "^1.9.1",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
